--- a/FunnyGif/FunnyGif/wwwroot/Index.html
+++ b/FunnyGif/FunnyGif/wwwroot/Index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <title>Funny Gif demo</title>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/aspnet-signalr/1.1.4/signalr.js"></script>
     <script src="aspnet/signalr/dist/browser/signalr.js"></script>
     <script src="message/message.js"></script>
 </head>
 <body>
     Running...
   <p>Current message:</p>
-  <label id="currentMessage">Auxilio me desamyo, callese viejo lesbiano</label>
+  <label id="currentMessage"></label>
 </body>
 </html>
